src/distillers/snapshots/omni__distillers__tests__cargo_build_distillation.snap
---
source: src/distillers/mod.rs
expression: output
---
Build: 1 errors, 0 warnings
error[E0432]: unresolved import `std::collections`
 --> src/main.rs:1:5
  |
1 | use std::collections::Foo;
  |     ^^^^^^^^^^^^^^^^^^^^^ no `Foo` in `collections`
